--- a/УПИС_Задание_№2_Формирование_иерархической_структуры_проекта.ipynb
+++ b/УПИС_Задание_№2_Формирование_иерархической_структуры_проекта.ipynb
@@ -275,7 +275,7 @@
         "      1.1.2.Основы орбитального движения и параметры TLE\n",
         "      Описываются принципы формирования TLE, их структура и физический смысл, чтобы обосновать использование этих данных в прогнозировании положения спутников.\n",
         "\n",
-        "      1.1.3.Модель SGP4 как стандарт прогноза орбит\n",
+        "      1.1.3.Основы модели SGP4\n",
         "      Приводится обзор модели SGP4, её алгоритмических особенностей и причин, почему она является международным стандартом для использования с TLE.\n",
         "\n",
         "   1.2.Обзор существующих инструментов прогнозирования орбит и доступа к данным ДЗЗ\n",
@@ -285,7 +285,7 @@
         "      1.2.2.Платформы доступа к архивным снимкам (EarthExplorer, Copernicus Browser)\n",
         "      Оценивается функциональность инструментов, позволяющих получить только готовые снимки, без возможностей прогнозирования будущих пролётов.\n",
         "\n",
-        "      1.2.3.Научные и коммерческие средства орбитального моделирования (GMAT, Orekit)\n",
+        "      1.2.3.Научные средства орбитального моделирования с открытым кодом и коммерческие конкуренты (GMAT, Orekit)\n",
         "      Рассматриваются профессиональные программные продукты для моделирования орбит, чтобы показать их сложность для прикладного использования и отсутствие простых интерфейсов планирования съёмки.\n",
         "      \n",
         "   1.3.Характеристики спутников ДЗЗ и параметры, влияющие на наблюдаемость\n",
